fix: fixed div out of screen in main page

--- a/frontend/exp-banking/src/index.css
+++ b/frontend/exp-banking/src/index.css
@@ -14,3 +14,6 @@
 :root {
     background-color: #F9F9F9;
 }
+* {
+    outline: 1px solid red;
+  }
